# reacTIVision

android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: AndroidVisionEngine.cpp  CMakeLists.txt  LogcatInterface.cpp  LogcatInterface.h  Logging.h
android/app/src/main/java/mkalten/reactivision/: MainActivity.kt  Settings.kt  VisionEngine.kt
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/values/: strings.xml
android/gradle/wrapper/: gradle-wrapper.properties
common/: FidtrackFinder.h  Main.cpp  Settings.cpp  Settings.h
ext/portvideo/common/: CameraTool.h  VisionEngine.h
ext/tuio/: UdpSender.h
